# luxury_python_template

./: .gitignore  README.md  index.html  package.py  pyproject.toml  report.html  requirements_dev.txt  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: release_on_main_push.yml
data/report_template/: file.jinja  main.jinja
docfiles/: conf.py  index.md
docfiles/templates/: package.rst_t
docs/: conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: documentation_options.js
docs/report/: report.html
docs/report/attachments/: cov.xml
docs/report/files/: 0.html  1.html
docs/report/sources/: 0.html
docs/source/: example_package_your_username_here.example_module.html  example_package_your_username_here.html  modules.html  pythontemplate.example_module.html  pythontemplate.html
files/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
src/example_package_your_username_here/: __init__.py  example_module.py
src/pythontemplate/: __init__.py  example_module.py
tests/: __init__.py  conftest.py  test_example.py
