[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "23.12.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Place your description here."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
  'requests[security] < 3',
]

[project.urls]
"Homepage" = "https://github.com/MY_USER/MY_REPO"
"Bug Tracker" = "https://github.com/MY_USER/MY_REPO/issues"