[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = -
author = AUTHOR NAME
author_email = somewhere@someplace.com
description = Place your description here.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MY_USER/MY_REPO
project_urls =
    Bug Tracker = https://github.com/MY_USER/MY_REPO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir =
    = src
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires = 


[options.packages.find]
where = src